hphp/hack/test/typecheck/is_expression/invalid_hint_generic.php
<?hh // strict

function foo<T>(mixed $x): bool {
  return $x is T;
}
